// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile header matches snapshot for friend profile 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m-4081bf90 mantine-Group-root"
    style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
  >
    <div
      class="m-4081bf90 mantine-Group-root"
      style="--group-gap: var(--mantine-spacing-xl); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: center; --stack-justify: flex-start;"
      >
        <div
          class="dummy"
          style="background-color: rgb(50, 82, 71);"
        >
          F
        </div>
        <div
          class="m-347db0ec mantine-Badge-root"
          style="--badge-radius: var(--mantine-radius-sm); --badge-bg: gold; --badge-color: var(--mantine-color-white); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m-91fdda9b mantine-Badge-section"
            data-position="left"
          >
            <svg
              class="tabler-icon tabler-icon-star"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"
              />
            </svg>
          </span>
          <span
            class="m-5add502a mantine-Badge-label"
          >
            Badges.Premium
          </span>
        </div>
        <div
          class="m-347db0ec mantine-Badge-root"
          style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-cyan-filled); --badge-color: var(--mantine-color-white); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m-91fdda9b mantine-Badge-section"
            data-position="left"
          >
            <svg
              class="tabler-icon tabler-icon-friends"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"
              />
              <path
                d="M5 22v-5l-1 -1v-4a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4l-1 1v5"
              />
              <path
                d="M17 5m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"
              />
              <path
                d="M15 22v-4h-2l2 -6a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1l2 6h-2v4"
              />
            </svg>
          </span>
          <span
            class="m-5add502a mantine-Badge-label"
          >
            Badges.Friend
          </span>
        </div>
      </div>
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <h2
          class="name m-8a5d1357 mantine-Title-root"
          data-order="2"
          style="--title-fw: var(--mantine-h2-font-weight); --title-lh: var(--mantine-h2-line-height); --title-fz: var(--mantine-h2-font-size);"
        >
          Frdnspnzr
        </h2>
        <h3
          class="realName m-8a5d1357 mantine-Title-root"
          data-order="3"
          style="--title-fw: var(--mantine-h3-font-weight); --title-lh: var(--mantine-h3-line-height); --title-fz: var(--mantine-h3-font-size);"
        >
          Pascal Greilach
        </h3>
        <p
          class="mantine-focus-auto subline m-b6d8b162 mantine-Text-root"
        >
          Header.BggName
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile header matches snapshot for full user details 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m-4081bf90 mantine-Group-root"
    style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
  >
    <div
      class="m-4081bf90 mantine-Group-root"
      style="--group-gap: var(--mantine-spacing-xl); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: center; --stack-justify: flex-start;"
      >
        <div
          class="dummy"
          style="background-color: rgb(50, 82, 71);"
        >
          F
        </div>
        <div
          class="m-347db0ec mantine-Badge-root"
          style="--badge-radius: var(--mantine-radius-sm); --badge-bg: murple; --badge-color: var(--mantine-color-white); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m-91fdda9b mantine-Badge-section"
            data-position="left"
          >
            <svg
              class="tabler-icon tabler-icon-code-circle-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 13.5l-1.5 -1.5l1.5 -1.5"
              />
              <path
                d="M15.5 10.5l1.5 1.5l-1.5 1.5"
              />
              <path
                d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"
              />
              <path
                d="M13 9.5l-2 5.5"
              />
            </svg>
          </span>
          <span
            class="m-5add502a mantine-Badge-label"
          >
            Badges.Admin
          </span>
        </div>
      </div>
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <h2
          class="name m-8a5d1357 mantine-Title-root"
          data-order="2"
          style="--title-fw: var(--mantine-h2-font-weight); --title-lh: var(--mantine-h2-line-height); --title-fz: var(--mantine-h2-font-size);"
        >
          Frdnspnzr
        </h2>
        <h3
          class="realName m-8a5d1357 mantine-Title-root"
          data-order="3"
          style="--title-fw: var(--mantine-h3-font-weight); --title-lh: var(--mantine-h3-line-height); --title-fz: var(--mantine-h3-font-size);"
        >
          Pascal Greilach
        </h3>
        <p
          class="mantine-focus-auto subline m-b6d8b162 mantine-Text-root"
        >
          Header.BggName
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile header matches snapshot for minimal user details 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m-4081bf90 mantine-Group-root"
    style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
  >
    <div
      class="m-4081bf90 mantine-Group-root"
      style="--group-gap: var(--mantine-spacing-xl); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: center; --stack-justify: flex-start;"
      >
        <div
          class="dummy"
          style="background-color: rgb(50, 82, 71);"
        >
          F
        </div>
        <div
          class="m-347db0ec mantine-Badge-root"
          style="--badge-radius: var(--mantine-radius-sm); --badge-bg: darkgray; --badge-color: var(--mantine-color-white); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m-91fdda9b mantine-Badge-section"
            data-position="left"
          >
            <svg
              class="tabler-icon tabler-icon-user"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
              />
              <path
                d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
              />
            </svg>
          </span>
          <span
            class="m-5add502a mantine-Badge-label"
          >
            Badges.User
          </span>
        </div>
      </div>
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <h2
          class="name m-8a5d1357 mantine-Title-root"
          data-order="2"
          style="--title-fw: var(--mantine-h2-font-weight); --title-lh: var(--mantine-h2-line-height); --title-fz: var(--mantine-h2-font-size);"
        >
          Frdnspnzr
        </h2>
        <h3
          class="realName m-8a5d1357 mantine-Title-root"
          data-order="3"
          style="--title-fw: var(--mantine-h3-font-weight); --title-lh: var(--mantine-h3-line-height); --title-fz: var(--mantine-h3-font-size);"
        />
        <p
          class="mantine-focus-auto subline m-b6d8b162 mantine-Text-root"
        >
          Header.BggName
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile header matches snapshot for own profile 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m-4081bf90 mantine-Group-root"
    style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
  >
    <div
      class="m-4081bf90 mantine-Group-root"
      style="--group-gap: var(--mantine-spacing-xl); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
    >
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: center; --stack-justify: flex-start;"
      >
        <div
          class="dummy"
          style="background-color: rgb(50, 82, 71);"
        >
          F
        </div>
        <div
          class="m-347db0ec mantine-Badge-root"
          style="--badge-radius: var(--mantine-radius-sm); --badge-bg: mink; --badge-color: var(--mantine-color-white); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m-91fdda9b mantine-Badge-section"
            data-position="left"
          >
            <svg
              class="tabler-icon tabler-icon-heart"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"
              />
            </svg>
          </span>
          <span
            class="m-5add502a mantine-Badge-label"
          >
            Badges.FriendsFamily
          </span>
        </div>
        <div
          class="m-347db0ec mantine-Badge-root"
          style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-gray-filled); --badge-color: var(--mantine-color-white); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m-91fdda9b mantine-Badge-section"
            data-position="left"
          >
            <svg
              class="tabler-icon tabler-icon-user-check"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
              />
              <path
                d="M6 21v-2a4 4 0 0 1 4 -4h4"
              />
              <path
                d="M15 19l2 2l4 -4"
              />
            </svg>
          </span>
          <span
            class="m-5add502a mantine-Badge-label"
          >
            Badges.You
          </span>
        </div>
      </div>
      <div
        class="m-6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-xs); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <h2
          class="name m-8a5d1357 mantine-Title-root"
          data-order="2"
          style="--title-fw: var(--mantine-h2-font-weight); --title-lh: var(--mantine-h2-line-height); --title-fz: var(--mantine-h2-font-size);"
        >
          Frdnspnzr
        </h2>
        <h3
          class="realName m-8a5d1357 mantine-Title-root"
          data-order="3"
          style="--title-fw: var(--mantine-h3-font-weight); --title-lh: var(--mantine-h3-line-height); --title-fz: var(--mantine-h3-font-size);"
        >
          Pascal Greilach
        </h3>
        <p
          class="mantine-focus-auto subline m-b6d8b162 mantine-Text-root"
        >
          Header.BggName
        </p>
      </div>
    </div>
    <div
      class="m-6d731127 mantine-Stack-root"
      style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
    >
      <div
        class="m-4081bf90 mantine-Group-root"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          class="mantine-focus-auto mantine-active m-77c9d27d mantine-Button-root m-87cf2631 mantine-UnstyledButton-root"
          data-variant="filled"
          data-with-left-section="true"
          style="--button-bg: var(--mantine-color-blue-filled); --button-hover: var(--mantine-color-blue-filled-hover); --button-color: var(--mantine-color-white); --button-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          type="button"
        >
          <span
            class="m-80f1301b mantine-Button-inner"
          >
            <span
              class="m-a74036a mantine-Button-section"
              data-position="left"
            >
              <svg
                class="tabler-icon tabler-icon-share-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 9h-1a2 2 0 0 0 -2 2v8a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-8a2 2 0 0 0 -2 -2h-1"
                />
                <path
                  d="M12 14v-11"
                />
                <path
                  d="M9 6l3 -3l3 3"
                />
              </svg>
            </span>
            <span
              class="m-811560b9 mantine-Button-label"
            >
              Share
            </span>
          </span>
        </button>
      </div>
      <a
        class="mantine-focus-auto mantine-active m-77c9d27d mantine-Button-root m-87cf2631 mantine-UnstyledButton-root"
        href="/app/profile/edit"
      >
        <span
          class="m-80f1301b mantine-Button-inner"
        >
          <span
            class="m-811560b9 mantine-Button-label"
          >
            Edit
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;
